objects/tffa__RecommendationItem__c.object
<CustomObject>
    <description>Represents a single recommended service or product. Usually a recommendation may contain multiple such items ordered based on likelihood, etc.</description>
    <fields>
        <fullName>tffa__Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recommendation item was accepted.</description>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowedAccountPurpose__c</fullName>
        <description>Allowed list of account purpose(s) for the product.</description>
        <label>Allowed Account Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AccountPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Information about the product or service. Usually contextual describing why the same was recommended.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Upper bound on quantity of product selected in cross-sell screen.</description>
        <label>Maximum quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OfferCode__c</fullName>
        <description>The unique code of the offer recommended.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to recommended offer</description>
        <label>Offer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Offer is inactive or invalid.</errorMessage>
            <filterItems>
                <field>tffa__Offer__c.tffa__ProductCategory__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Offer__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Offer__c</referenceTo>
        <relationshipLabel>Recommendation Items</relationshipLabel>
        <relationshipName>RecommendationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Category of recommended product.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCode__c</fullName>
        <description>The unique code of the product recommended.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to recommended product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not active.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Recommendation Items</relationshipLabel>
        <relationshipName>RecommendationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PromotionCode__c</fullName>
        <description>The unique of the recommended promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to recommended promotion</description>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Promotion not active.</errorMessage>
            <filterItems>
                <field>tffa__Promotion__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Recommendation Items</relationshipLabel>
        <relationshipName>RecommendationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Recommendation__c</fullName>
        <description>Reference to parent Recommendation.</description>
        <label>Recommendation</label>
        <referenceTo>tffa__Recommendation__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order of the item. Signifies relative importance among list of recommended products.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceId__c</fullName>
        <description>Source identifier for the recommendation item. e.g. Id of RecommendationConfigurationItem</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recommendation Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommendation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>